--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@ function compute()
 </tbody>
 </table>
 
-<p>(Every layer has gap(s) in ROS#1.)</p>
-<p>(Smart is for smart crystalization: if there are consecutive crysaliztions with the same color then only the last crystalization is performed, pins must be use to prevent dropping in the skipped layers.)</p>
+<p>(Smart is for smart crystalization: if there are consecutive crystaliztions with the same color then only the last one is performed, pins must be use to prevent dropping in the skipped layers.)</p>
 <p>Calculates averages for the ROS0 and the ROS1 shapes without pin pushed layers.</p>
 <p>Computes the average times required for making the same amount as 4 full belts output would give.</p>
 <p>The result is 1 if the given supply is enough to produce 4 full belts of any ROS shape.</p>
