--- a/index.html
+++ b/index.html
@@ -123,12 +123,11 @@ function compute()
 </tbody>
 </table>
 
-<p>(Smart is for smart crystalization: if there are consecutive crystaliztions with the same color then only the last one is performed, pins must be use to prevent dropping in the skipped layers.)</p>
+<p>(Smart is for smart crystalization: if there are consecutive crystaliztions with the same color then only the last one is performed, pins must be used to prevent dropping in the skipped layers.)</p>
 <p>Calculates averages for the ROS0 and the ROS1 shapes without pin pushed layers.</p>
 <p>Computes the average times required for making the same amount as 4 full belts output would give.</p>
 <p>The result is 1 if the given supply is enough to produce 4 full belts of any ROS shape.</p>
 <p>ROS shapes with pins are not taken into account, they would only improve the results because of the destroyed shape parts in excess layers.</p>
-<p>The computation does not deal with the <a target="_blank" href="https://discord.com/channels/1000343719314198548/1282418371723268249">bug in the ROS algo</a>.</p>
 
 <p>Assumptions:
 <ul>
