--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ function compute()
 </form>
 <p>(The probability of a quadrant being Wiamond is 10%.)</p>
 <p>(The ROS#1 input includes fluid for painting and crystal generation.)</p>
-<p>(Assuming that the machine uses conventional color mixing: extra primary colors are not mixed, 2x secondary and 3x white can be mixed.)</p>
+<p>(Assuming the machine uses conventional color mixing: extra primary colors are not mixed, 2x secondary and 3x white can be mixed.)</p>
 
 <table>
 <caption>
@@ -128,7 +128,7 @@ function compute()
 <p>Pinned shapes are excluded from the computation, as their presence would only lower the resulting values due to omitted shape parts in excess layers.</p>
 <p>The calculation is based on the assumption that, during a supply shortage, output is proportional to the least supplied resource, measured as a percentage of the required amount. (The reality is probably not so ideal)</p>
 
-<p>Assumptions:
+<p>Other assumptions:
 <ul>
 <li>supply is shared between layers</li>
 <li>every consumed input shape is fully utilized (e.g., no half destroyers are used)</li>
