--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Shapez2 ROS calcu</title>
+<title>Supply Calculator for Quad-Mode ROS Machines with Four Output Belts - Shapez2</title>
 <style>
 input:valid {
   background-color: palegreen;
@@ -71,6 +71,7 @@ function compute()
 
 </script>
 
+<h2>Supply Calculator for Quad-Mode ROS Machines Regartding Four Output Belts</h2>h2>
 <form>
 <table>
 <thead>
@@ -81,24 +82,24 @@ function compute()
 
 <td>
 <input type="text" id="s0" placeholder="floating point > 0" pattern="\d+(\.\d+)?" required="1" value="2.5" oninput="compute()" />
-<label for="s0">Circle (31.5%)</label>
+<label for="s0">Circle (31.5%)</label> max: 4
 <br />
 <input type="text" id="s1" placeholder="floating point > 0" pattern="\d+(\.\d+)?" required="1" value="2.5" oninput="compute()" />
-<label for="s1">Rectangle (31.5%)</label>
+<label for="s1">Rectangle (31.5%)</label> max: 4
 <br />
 <input type="text" id="s2" placeholder="floating point > 0" pattern="\d+(\.\d+)?" required="1" value="2.5" oninput="compute()" />
-<label for="s2">Star (27%)</label>
+<label for="s2">Star (27%)</label> max: 4
 <br />
 <input type="text" id="s3" placeholder="floating point > 0" pattern="\d+(\.\d+)?" required="1" value="1.2" oninput="compute()" />
-<label for="s3">Wiamond (10%)</label>
+<label for="s3">Wiamond (10%)</label> max: 4
 </td>
 
 <td style="vertical-align:top;text-align:right">
 <label for="c0">For ROS#0 machines</label>
-<input type="text" id="c0" placeholder="floating point > 0" pattern="\d+(\.\d+)?" required="1" value="1.5" oninput="compute()" />
+<input type="text" id="c0" placeholder="floating point > 0" pattern="\d+(\.\d+)?" required="1" value="1.5" oninput="compute()" /> max: 4
 <br />
 <label for="c1">For ROS#1 machines</label>
-<input type="text" id="c1" placeholder="floating point > 0" pattern="\d+(\.\d+)?" required="1" value="4.5" oninput="compute()" />
+<input type="text" id="c1" placeholder="floating point > 0" pattern="\d+(\.\d+)?" required="1" value="4.5" oninput="compute()" /> max: 12
 <br />
 </td>
 
