--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ function compute()
 
 </script>
 
-<h2>Supply Calculator for Quad-Mode ROS Machines Regartding Four Output Belts</h2>h2>
+<h2>Supply Calculator for Quad-Mode ROS Machines Regartding Four Output Belts</h2>
 <form>
 <table>
 <thead>
@@ -112,9 +112,7 @@ function compute()
 <p>(Assuming the machine uses conventional color mixing: extra primary colors are not mixed, 2x secondary and 3x white can be mixed.)</p>
 
 <table>
-<caption>
 <h4>Productivity measured by time</h4>
-</caption>
 <thead>
 <tr><th></th><th>1 Layer</th><th>2 Layers</th><th>3 Layers</th><th>4 Layers</th><th>5 Layers</th></tr>
 </thead>
