--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Supply Calculator for Quad-Mode ROS Machines with Four Output Belts - Shapez2</title>
+<title>Supply Calculator for Quad-Mode ROS Machines Regarding Four Output Belts - Shapez2</title>
 <style>
 input:valid {
   background-color: palegreen;
@@ -71,7 +71,7 @@ function compute()
 
 </script>
 
-<h2>Supply Calculator for Quad-Mode ROS Machines Regartding Four Output Belts</h2>
+<h1>Supply Calculator for Quad-Mode ROS Machines Regarding Four Output Belts</h1>
 <form>
 <table>
 <thead>
@@ -94,9 +94,9 @@ function compute()
 <label for="s3">Wiamond (10%)</label>
 </td>
 
-<td style="vertical-align:top;text-align:left">
+<td style="vertical-align:top;text-align:right">
 <label for="c0">For ROS#0 machines</label>
-<input type="text" id="c0" placeholder="floating point > 0" pattern="\d+(\.\d+)?" required="1" value="1.5" oninput="compute()" /> max: 4
+<input type="text" id="c0" placeholder="floating point > 0" pattern="\d+(\.\d+)?" required="1" value="1.5" oninput="compute()" /> max: 4&ensp;
 <br />
 <label for="c1">For ROS#1 machines</label>
 <input type="text" id="c1" placeholder="floating point > 0" pattern="\d+(\.\d+)?" required="1" value="4.5" oninput="compute()" /> max: 12
@@ -112,7 +112,7 @@ function compute()
 <p>(Assuming the machine uses conventional color mixing: extra primary colors are not mixed, 2x secondary and 3x white can be mixed.)</p>
 
 <table>
-<h4>Productivity measured by time</h4>
+<h3>Productivity measured by time</h3>
 <thead>
 <tr><th></th><th>1 Layer</th><th>2 Layers</th><th>3 Layers</th><th>4 Layers</th><th>5 Layers</th></tr>
 </thead>
