--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ function compute()
 <form>
 <table>
 <thead>
-<tr><th><h4>Supplied belts per layer (max: 4)</h4></th><th><h4>Supplied launchers of R, G and B fluids per layer</h4></th></tr>
+<tr><th><h4>Supplied belts per layer (max: 4)</h4></th><th style="padding-left: 20px"><h4>Supplied launchers of R, G and B fluids per layer</h4></th></tr>
 </thead>
 <tbody>
 <tr>
@@ -127,7 +127,7 @@ function compute()
 <p>Pinned shapes are excluded from the computation, as their presence would only lower the resulting values due to omitted shape parts in excess layers.</p>
 <p>The calculation is based on the assumption that, during a supply shortage, output is proportional to the least supplied resource, measured as a percentage of the required amount. (The reality is probably not so ideal)</p>
 
-<p>Other assumptions:
+<p><b>Other assumptions</b>
 <ul>
 <li>supply is shared between layers</li>
 <li>every consumed input shape is fully utilized (e.g., no half destroyers are used)</li>
